@@ -6,18 +6,10 @@
  */
 package com.powsybl.afs.security.local;
 
-import com.google.common.collect.ImmutableList;
-import com.powsybl.commons.report.ReportNode;
-import com.powsybl.computation.ComputationManager;
 import com.powsybl.contingency.ContingenciesProvider;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.loadflow.LoadFlowResult;
 import com.powsybl.security.*;
-import com.powsybl.action.Action;
-import com.powsybl.security.interceptors.SecurityAnalysisInterceptor;
-import com.powsybl.security.limitreduction.LimitReduction;
-import com.powsybl.security.monitor.StateMonitor;
-import com.powsybl.security.strategy.OperatorStrategy;
 
 import java.util.Collections;
 import java.util.List;
@@ -39,25 +31,16 @@ public class SecurityAnalysisProviderMock implements SecurityAnalysisProvider {
     }
 
     @Override
-    public CompletableFuture<SecurityAnalysisReport> run(
-            Network network,
-            String workingVariantId,
-            LimitViolationDetector detector,
-            LimitViolationFilter filter,
-            ComputationManager computationManager,
-            SecurityAnalysisParameters parameters,
-            ContingenciesProvider contingenciesProvider,
-            List<SecurityAnalysisInterceptor> interceptors,
-            List<OperatorStrategy> operatorStrategies,
-            List<Action> actions,
-            List<StateMonitor> monitors,
-            List<LimitReduction> limitReductions,
-            ReportNode reportNode) {
+    public CompletableFuture<SecurityAnalysisReport> run(Network network,
+                                                         String workingVariantId,
+                                                         ContingenciesProvider contingenciesProvider,
+                                                         SecurityAnalysisRunParameters runParameters) {
         LimitViolationsResult preContingencyResult = new LimitViolationsResult(
-                ImmutableList.of(new LimitViolation("s1", LimitViolationType.HIGH_VOLTAGE, 400.0, 1f, 440.0))
+            List.of(new LimitViolation("s1", LimitViolationType.HIGH_VOLTAGE, 400.0, 1f, 440.0))
         );
         SecurityAnalysisResult result = new SecurityAnalysisResult(preContingencyResult,
-                LoadFlowResult.ComponentResult.Status.CONVERGED, Collections.emptyList());
+            LoadFlowResult.ComponentResult.Status.CONVERGED, Collections.emptyList());
         return CompletableFuture.completedFuture(new SecurityAnalysisReport(result));
+
     }
 }
